<resources>
    <string name="app_name">mobile</string>

    <!--used for layout   -->
    <string name="layout_login_username">username</string>
    <string name="layout_login_password">password</string>
    <string name="layout_login_button">Login</string>

    <string name="title_home">Home</string>
    <string name="title_statist">Statist</string>
    <string name="title_message">Message</string>
    <string name="title_profile">Profile</string>
    <string name="kg">kg</string>
    <string name="name">name</string>
    <string name="last_check_in">last check-in</string>
    <string name="flagged">flagged</string>
    <string name="alert">alert</string>
    <string name="new_dog">New Dog</string>
    <string name="name_enter">Username:</string>
    <string name="breed_enter">Breed:</string>
    <string name="location_enter">Location:</string>
    <string name="create">CREATE</string>
    <string name="cancel">CANCEL</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log out</string>
    <string name="new_user">New User</string>
    <string name="job_enter">job:</string>
    <string name="access_level">Access Level:</string>
    <string name="delete">DELETE</string>
    <string name="save">SAVE</string>
    <string name="edit_user">Edit User</string>
    <string name="edit_dog">Edit Dog</string>
    <string name="add_weight">Add Weight</string>
    <string name="select_scales">Select scales</string>
    <string name="start_weighing">START WEIGHING</string>

    <string-array name="centers_list">
        <item>All Centers</item>
        <item>Manukau</item>
        <item>Papakura</item>
    </string-array>

    <string-array name="access_level_list">
        <item>Admin</item>
        <item>Vet</item>
        <item>Volunteer</item>
    </string-array>
</resources>